[package]
name = "badger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4"
tracing="0.1.37"
# tracing-subscriber = "0.2.0"
tokio = { version = "1", features = ["full"] }
anyhow="*"
thiserror="1"
once_cell = "1.18.0"
libc="*"
bytes="1"
prost="0.12"
crc32fast="1.3"
bincode = "1.3.3"
lazy_static = "1.4.0"
serde = {version="1.0.188",features = ["derive"]}
stretto={path = "./stretto",features = ["async"]}
# aead = "0.5.
aes-gcm-siv = "0.11.1"
aes-gcm="0.10"
# aes="0.8"
getrandom = "0.2.10"
flatbuffers = "23.5.26"
xxhash-rust = {version = "0.8.7",features = ["xxh64","xxh3"]}
snap = "1.1.0"
zstd="0.12"
rand = "0.8.5"
integer-encoding = "4.0.0"
# hashbrown="*"
ahash="*"
either = "1.9.0"
memmap2 = "0.8"
smallvec = "1.11.1"
# tracing = "0.1.37"
# bumpalo = {version="3.13.0",features=["boxed","collections"]}
# generational-arena = "0.2.9"
[build-dependencies]
prost-build="0.12"