[package]
name = "badger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tracing = "0.1.37"
# tracing-subscriber = "0.2.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
once_cell = "1.18.0"
libc = "0.2"
bytes = "1"
prost = "0.12"
crc32fast = "1.3"
bincode = "1.3.3"
lazy_static = "1.4.0"
serde = { version = "1.0.188", features = ["derive"] }
stretto = { path = "./stretto", features = ["async"] }
# aead = "0.5.
aes-gcm-siv = "0.11.1"
aes-gcm = "0.10"
# aes="0.8"
getrandom = "0.2.10"
flatbuffers = "23.5.26"
xxhash-rust = { version = "0.8.7", features = ["xxh64", "xxh3"] }
snap = "1.1.0"
zstd = "0.13"
rand = "0.8.5"
integer-encoding = "4.0.0"
# hashbrown="*"
ahash = "*"
either = "1.9.0"
memmap2 = "0.9"
smallvec = "1.11.1"
bitflags = "2.4.0"
scopeguard = "1.2.0"
parking_lot = "0.12.1"
async-channel = "1.9.0"
num_cpus = "1.16.0"
# tracing = "0.1.37"
# bumpalo = {version="3.13.0",features=["boxed","collections"]}
# generational-arena = "0.2.9"
[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
criterion = "0.5"


[[bench]]
name = "my_bench"
harness = false
