[package]
name = "badger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# default = ["metrics", "moka","stretto"]
default = ["metrics", "moka"]
metrics = []
# async_cache = []

[dependencies]
log = "0.4"
tracing = "0.1.37"
# tracing-subscriber = "0.2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1"
thiserror = "1"
libc = "0.2"
bytes = "1"
prost = "0.12"
crc32fast = "1.3"
lazy_static = "1.4.0"
moka = { version = "0.12.1", features = ["sync", "future"], optional = true }
stretto = { path = "./stretto", features = ["full"], optional = true }
aes-gcm-siv = "0.11.1"
aes-gcm = "0.10"
getrandom = "0.2.10"
flatbuffers = "23.5.26"
xxhash-rust = { version = "0.8.7", features = ["xxh64", "xxh3"] }
snap = "1.1.0"
zstd = "0.13"
rand = "0.8.5"
integer-encoding = "4.0.0"
ahash = "*"
either = "1.9.0"
memmap2 = "0.9"
smallvec = "1.11.1"
bitflags = "2.4.0"
scopeguard = "1.2.0"
parking_lot = "0.12.1"
async-channel = "2.0.0"
num_cpus = "1.16.0"
rayon = "1.8.0"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-rayon = "2.1.0"

[[bench]]
name = "my_bench"
harness = false
[[bench]]
name = "checksum"
harness = false
